# trailhawks.com

./: .bumpversion.cfg  .editorconfig  .env-dist  .env-sample  .gitignore  .pre-commit-config.yaml  63478.json  CLAUDE.md  Caddyfile  Makefile  Procfile  README.md  compose.hawkhundred.prod.yml  compose.prod.yml  compose.yml  context_processors.py  db.dump  dev_middleware.py  docker-compose-both-websites.yml  docker-compose.yml  healthcheck-worker.sh  import.sh  justfile  manage.py  post-update.sh  pyproject.toml  requirements.in  requirements.txt  scrape_ultrasignup.py  signals.py  start-web.sh  urls.md  views.py  web-start.sh
.docker/: Dockerfile
.dockerfiles/: Dockerfile  Dockerfile.playwright  Dockerfile.web  Dockerfile.worker
.github/workflows/: actions.yml  build-and-publish-django-action.yml  build-and-publish-nginx-action.yml  deploy-main.yml  deploy.yml
assets/css/: app.css  style.css  tailwind.css
assets/img/: header-hawk-2016.pxm
assets/js/: app.js
blog/: admin.py  listeners.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20200816_0929.py  0003_remove_post_enable_comments.py
blog/templatetags/: blog_tags.py
config/: api.py  settings.py  settings_hawkhundred.py  settings_tailwind.py  settings_trailhawks.py  staff_urls.py  staff_views.py  urls.py  urls_hawkhundred.py  views.py
core/: __init__.py  admin.py  context_processors.py  models.py  proxy_storage.py  syncer.py  views.py
core/templatetags/: core_tags.py  mailhide.py  share_tags.py
events/: admin.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py  0001_initial_squashed_0005_auto_20210612_1140.py  0002_event_races.py  0003_auto_20200816_0929.py  0004_remove_event_enable_comments.py  0005_auto_20210612_1140.py
exports/: 10136-skyline-shuffle-2009.json  101450-skyline-shuffle-2023.json  10470-skyline-shuffle-2010.json  11877-hawk-50-mile-marathon-trail-runs-2011.json  11986-pi-day-river-rotation-2011.json  12054-hawk-hundred-2011.json  14150-skyline-shuffle-2011.json  14555-hawk-hundred-2012.json  14595-sanders-saunter-charity-race-2011.json  14596-sanders-saunter-charity-race-2009.json  14609-sanders-saunter-charity-race-2010.json  15764-pi-day-river-rotation-2012.json  16492-skyline-shuffle-2012.json  17970-hawk-hundred-2013.json  18024-sanders-saunter-charity-race-2012.json  19047-pi-day-river-rotation-2013.json  19803-skyline-shuffle-2013.json  26492-pi-day-river-rotation-2014.json  26792-hawk-hundred-2014.json  27470-skyline-shuffle-2014.json  29677-sanders-saunter-charity-race-2014.json  30887-hawk-hundred-2015.json  30993-sanders-saunter-charity-race-2015.json  31893-skyline-shuffle-2015.json  32583-night-hawk-50k-20m-and-10m-2015.json  34358-pi-day-river-rotation-2016.json  34684-hawk-hundred-2016.json  36684-night-hawk-50k-20m-and-10m-2016.json  37251-skyline-shuffle-2016.json  37656-sanders-saunter-charity-race-2016.json  37657-sanders-saunter-charity-race-2016.json  37661-the-snake-2016.json  41893-pi-day-river-rotation-2017.json  41915-hawk-hundred-2017.json  43925-sanders-saunter-charity-race-2017.json  43927-sanders-saunter-charity-race-2017.json  43955-night-hawk-50k-20m-and-10m-2017.json  44706-skyline-shuffle-2017.json  44714-the-snake-2017.json  49109-shoreline-shuffle-2017.json  (+41 more)
faq/: admin.py  models.py  urls.py  views.py
faq/migrations/: 0001_initial.py
faq/templatetags/: faq_tags.py
fixtures/: faq.json  locations.json  members.office.json  members.term.json
frontend/: index.css  tailwind.config.js
frontend/js/: app.js  jquery.juitter.js  system.js
links/: admin.py  models.py  urls.py  views.py
links/migrations/: 0001_initial.py
links/templatetags/: links_tags.py
locations/: admin.py  models.py
locations/migrations/: 0001_initial.py
members/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
members/migrations/: 0001_initial.py  0002_member_gender_text.py  0003_remove_member_gender.py  0004_auto_20200724_1500.py  0005_auto_20200815_2351.py
members/templatetags/: members_tags.py
news/: admin.py  managers.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_auto_20200816_0929.py  0003_remove_news_enable_comments.py
news/templatetags/: news_tags.py
nginx/: Dockerfile  nginx.conf
photos/: apis.py  serializers.py  urls.py  views.py
photos/templatetags/: photo_tags.py
races/: admin.py  agents.py  callbacks.py  feeds.py  forms.py  managers.py  models.py  schemas.py  urls.py  views.py
races/migrations/: 0001_initial.py  0001_initial_squashed_0022_remove_race_background.py  0002_race_sponsors.py  0003_remove_race_background.py  0004_race_background.py  0005_auto_20200816_0906.py  0006_auto_20200816_0929.py  0007_remove_race_enable_comments.py  0008_auto_20210321_1908.py  0009_auto_20210612_1041.py  0010_report_description.py  0011_auto_20210612_1045.py  0012_remove_racer_shirt_size.py  0013_auto_20210612_1103.py  0014_auto_20210612_1405.py  0015_auto_20210612_1405.py  0016_auto_20210612_1453.py  0017_race_ultrasignup_id.py  0018_result_import_data.py  0019_series.py  0020_auto_20230308_2336.py  0021_alter_race_background.py  0022_remove_race_background.py  0023_racer_gender_text.py  0024_migrate_racer_gender_to_text.py  0025_remove_racer_gender.py  0026_rename_gender_text_to_gender.py  0027_alter_race_cut_off_alter_race_distance.py
races/templatetags/: race_tags.py
requirements/: base.txt  requirements.in  requirements.txt
runs/: admin.py  managers.py  models.py  urls.py  views.py
runs/migrations/: 0001_initial.py  0001_initial_squashed_0005_remove_run_contact.py  0002_auto_20200816_0929.py  0003_remove_run_enable_comments.py  0004_run_leaders.py  0005_remove_run_contact.py
runs/templatetags/: run_tags.py
scrapers/: scrape_ultrasignup.py
settings/: base.py
sitemaps/: default.py  races.py
sponsors/: admin.py  managers.py  models.py  urls.py  views.py
sponsors/migrations/: 0001_initial.py  (+1 more)
tests/: test_admin_smoke.py  test_import_runsignup_results.py  test_import_ultrasignup_results.py  test_placeholder.py  test_staff_views.py
(+261 files in other folders)
