[tool.poetry]
name = "Lawrence Trail Hawks"
version = "2023.3.1"
description = ""
authors = ["Jeff Triplett <jeff.triplett@gmail.com>"]

[tool.bumpver]
current_version = "2023.3.1"
version_pattern = "YYYY.MM.INC1"
commit_message = ":bookmark: bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"core/__init__.py" = [
    '__version__ = "{version}"',
]
"README.md" = [
    "{version}",
]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501", "E741"] # temporary

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".github",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "CONTRIBUTORS.md",
    "dist",
    "migrations",
    "node_modules",
    "settings/docker.py",
    "static",
    "venv",
]

# per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.7.
target-version = "py37"

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"config/settings_hawkhundred.py" = ["F403", "F405"]
"config/settings_tailwind.py" = ["F403", "F405"]
"config/settings_trailhawks.py" = ["F403", "F405"]
"manage.py" = ["E402"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
